# ugarit

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
.cspell/: custom-dictionary-workspace.txt
attic/: algorithm.hpp  concepts.hpp  ctv.hpp  meta.hpp  meta_.hpp  meta_algorithms.hpp  meta_core.hpp  meta_sig.hpp  metric.hpp  nset.hpp  typealiases.hpp
doc/: CMakeLists.txt  doc.bib  doc.tex  notes.txt
include/ugarit/: baseset.h  basisblade.hpp  grassmann.h  index_set.h  index_set_old.h  meta.h  meta.hpp  meta_core.hpp  meta_sig.hpp  metric.h  scalar.h  sparse_array.h  sparse_vector.h  ugarit.h  utility.hpp
src/: core.ixx  demangle.cpp  main.cpp  meta.cpp  meta.ixx  metric.ixx  sparse.ixx  ugarit.cpp  ugarit.ixx
src/ugarit/: clifford.ixx  util.ixx
test/: CMakeLists.txt  test_meta.cpp  test_ugarit.cpp
test/doctest/: CMakeCache.txt  CMakeLists.txt  test_core.cpp  test_meta.cpp  test_meta_sig.cpp
test/gtest/: CMakeLists.txt  test_meta.cpp  test_ugarit.cpp
test/testutils/: CMakeLists.txt
test/testutils/include/testutils/: demangle.hpp
test/testutils/src/: demangle.cpp
